fixed layout overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Pixelify+Sans:wght@600&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,900;1,700&display=swap');
 
 .container {
-  margin: 0 auto;
-  padding: 0 2rem;
+  position: relative;
+}
+
+.flex-center{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 
